Added new question types and admin pages

--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -7,6 +7,7 @@
 
 <MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" />
 <MudDialogProvider />
+<MudPopoverProvider />
 <MudSnackbarProvider />
 
 <MudLayout>
@@ -24,6 +25,7 @@
             <MudNavLink Href="/admin/notes" Icon="@Icons.Material.Filled.Note">Notes</MudNavLink>
             <MudNavLink Href="/admin/essays" Icon="@Icons.Material.Filled.WrapText">Essays</MudNavLink>
             <MudNavLink Href="/admin/Questions" Icon="@Icons.Material.Filled.QuestionAnswer">Questions</MudNavLink>
+            <MudNavLink Href="/admin/questionsv2" Icon="@Icons.Material.Filled.QueryBuilder">Questions V2</MudNavLink>
             <MudNavLink Href="/admin/corrections" Icon="@Icons.Material.Filled.QuestionMark">Corrections</MudNavLink>
             <MudNavLink Href="/admin/Articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
             <MudNavLink Href="/admin/roles" Icon="@Icons.Material.Filled.LocalParking">Roles</MudNavLink>
