--- a/Routes.razor
+++ b/Routes.razor
@@ -8,6 +8,7 @@
             typeof(MedbaseComponents.Pages.Essays.Essays).Assembly,
             typeof(MedbaseComponents.Pages.Articles.Articles).Assembly,
             typeof(MedbaseComponents.Pages.Notes.Notes).Assembly,
+            typeof(MedbaseComponents.Pages.Questions2.QuestionsPage2).Assembly,
         }">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(WebLayout)" />
