--- a/_Imports.razor
+++ b/_Imports.razor
@@ -19,6 +19,7 @@
 @using MedbaseComponents.Pages.Articles
 @using MedbaseComponents.Pages.Notes
 @using MedbaseComponents.Pages
+@using MedbaseComponents.Pages.Questions2
 @using MedbaseLibrary.Essays
 @using MedbaseLibrary.Notes
 @using PSC.Blazor.Components.MarkdownEditor
