--- a/Pages/App.razor
+++ b/Pages/App.razor
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="_content/MedbaseComponents/wwwroot/css/common.css" />
 
-    <HeadOutlet @rendermode="@RenderMode.InteractiveServer" />
+    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
     <link href="css/site.css" rel="stylesheet" />
 
     <!--WhatsApp Metas-->
@@ -57,7 +57,7 @@
 
 </head>
 <body>
-    <Routes @rendermode="@RenderMode.InteractiveServer" />
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -72,6 +72,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
 </html>
