--- a/Pages/App.razor
+++ b/Pages/App.razor
@@ -73,6 +73,7 @@
     <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
     <script src="_framework/blazor.web.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/keyboardShortcuts.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
 </html>
