removed navlinks of everything of the navbar

--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -1,7 +1,4 @@
-﻿@page "/"
-@page "/home"
-@page "/home/{userId}"
-@using MedbaseLibrary.Models;
+﻿@using MedbaseLibrary.Models;
 
 @using MedbaseLibrary.Services;
 @using MedbaseComponents.Controls;
